--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
 name = "rusty-restart-claude"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 description = "MCP server that can restart Claude Code to reload MCP servers during development"
 license = "MIT"
 
 [dependencies]
-# Async runtime (with features for wrapper mode)
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time", "fs", "signal"] }
-
 # JSON-RPC / MCP message handling
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -25,13 +22,9 @@ which = "7"
 dirs = "6"
 ctrlc = "3"
 
-# Terminal emulation for scrollback
-vt100 = "0.16"
-
 # Unix process control
 [target.'cfg(unix)'.dependencies]
-libc = "0.2"
-nix = { version = "0.29", features = ["term", "process", "signal", "fs", "poll"] }
+nix = { version = "0.29", features = ["process", "signal"] }
 
 [profile.release]
 lto = true
