--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "rusty-restart-claude"
+name = "aegis-mcp"
 version = "0.3.0"
 edition = "2021"
-description = "MCP server that can restart Claude Code to reload MCP servers during development"
+description = "Universal agent supervisor with hot-reload support for MCP servers"
 license = "MIT"
 
 [dependencies]
@@ -22,9 +22,15 @@ which = "7"
 dirs = "6"
 ctrlc = "3"
 
+# Async runtime for agent pool
+tokio = { version = "1", features = ["full"] }
+
+# UUID for agent IDs
+uuid = { version = "1", features = ["v4"] }
+
 # Unix process control
 [target.'cfg(unix)'.dependencies]
-nix = { version = "0.29", features = ["process", "signal"] }
+nix = { version = "0.29", features = ["process", "signal", "user"] }
 
 [profile.release]
 lto = true
