--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,9 @@ nix = { version = "0.29", features = ["process", "signal", "user"] }
 [profile.release]
 lto = true
 strip = true
+
+[workspace]
+members = ["hooks"]
+
+[dev-dependencies]
+tempfile = "3.24.0"
