Implement watchdog module for process health monitoring
- Added a new `watchdog` module to monitor child process health, detect unresponsiveness, and handle recovery actions.
- Introduced `WatchdogConfig` for customizable settings including heartbeat timeout, check interval, resource limits, and lockup actions.
- Created `ProcessActivity` struct to track activity timestamps and resource usage for monitored processes.
- Implemented health check logic in the `Watchdog` struct to assess process state and trigger actions based on configuration.
- Integrated watchdog functionality into the existing wrapper, allowing for process monitoring and management.
- Added shared state management for TUI/MCP communication, including agent status and health information.
- Enhanced signal handling for watchdog pings and configuration updates.
- Updated tests to cover new watchdog functionality and ensure basic operation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1"
 which = "7"
 dirs = "6"
 ctrlc = "3"
+humantime = "2"
 
 # Async runtime for agent pool
 tokio = { version = "1", features = ["full"] }
@@ -28,9 +29,19 @@ tokio = { version = "1", features = ["full"] }
 # UUID for agent IDs
 uuid = { version = "1", features = ["v4"] }
 
+# Process monitoring
+sysinfo = "0.38"
+
+# TUI
+ratatui = "0.30"
+ratatui-interact = "0.3"
+crossterm = "0.29"
+tui-input = "0.15"
+
 # Unix process control
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.29", features = ["process", "signal", "user"] }
+libc = "0.2"
 
 [profile.release]
 lto = true
@@ -38,6 +49,9 @@ strip = true
 
 [workspace]
 members = ["hooks"]
+
+[build-dependencies]
+chrono = "0.4"
 
 [dev-dependencies]
 tempfile = "3.24.0"
