--- a/hooks/Cargo.toml
+++ b/hooks/Cargo.toml
@@ -14,3 +14,6 @@ once_cell = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ctor = "0.2"
+
+[build-dependencies]
+chrono = "0.4"
